--- a/videotheque/templates/signin.html
+++ b/videotheque/templates/signin.html
@@ -1,39 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-	<!-- Font -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600%7CUbuntu:300,400,500,700" rel="stylesheet"> 
-
-	<!-- CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-reboot.min.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-grid.min.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/owl.carousel.min.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/jquery.mCustomScrollbar.min.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/nouislider.min.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/ionicons.min.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/plyr.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/photoswipe.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/default-skin.css') }}">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-
-	<!-- Favicons -->
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='icon/favicon-32x32.png') }}" sizes="32x32">
-	<link rel="apple-touch-icon" href="{{ url_for('static', filename='icon/favicon-32x32.png') }}">
-	<link rel="apple-touch-icon" sizes="72x72" href="{{ url_for('static', filename='icon/apple-touch-icon-72x72.png') }}">
-	<link rel="apple-touch-icon" sizes="114x114" href="{{ url_for('static', filename='icon/apple-touch-icon-114x114') }}">
-	<link rel="apple-touch-icon" sizes="144x144" href="{{ url_for('static', filename='icon/apple-touch-icon-144x144.png') }}">
-
-	<meta name="description" content="">
-	<meta name="keywords" content="">
-	<meta name="author" content="Dmitry Volkov">
-	<title>FlixGo – Online Movies, TV Shows & Cinema HTML Template</title>
-
-</head>
-<body class="body">
+{% include 'header_common.html' %}
 
 	<div class="sign section--bg" data-bg="{{ url_for('static', filename='images/section/section.jpg') }}">
 		<div class="container">
@@ -72,20 +37,4 @@
 		</div>
 	</div>
 
-	<!-- JS -->
-    <script src="{{ url_for('static', filename='js/jquery-3.3.1.min.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/owl.carousel.min.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/jquery.mousewheel.min.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/jquery.mCustomScrollbar.min.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/wNumb.min.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/nouislider.min.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/plyr.min.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/jquery.morelines.min.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/photoswipe.min.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/photoswipe-ui-default.min.js') }}"></script>
-	<script src="{{ url_for('static', filename='js/main.js') }}"></script>
-
-</body>
-
-</html>
+{% include 'footer_common.html' %}
