--- a/videotheque/templates/signin.html
+++ b/videotheque/templates/signin.html
@@ -1,40 +1,41 @@
 {% include 'header_common.html' %}
 
-	<div class="sign section--bg" data-bg="{{ url_for('static', filename='images/section/section.jpg') }}">
-		<div class="container">
-			<div class="row">
-				<div class="col-12">
-					<div class="sign__content">
-						<!-- authorization form -->
-						<form action="#" class="sign__form">
-							<a href="index.html" class="sign__logo">
-								<img src="{{ url_for('static', filename='images/logo.svg') }}" alt="">
-							</a>
+<div class="sign section--bg" data-bg="{{ url_for('static', filename='images/section/section.jpg') }}">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="sign__content">
+                    <!-- authorization form -->
+					<form action="{{ url_for('signin') }}" method="POST" class="sign__form">
+						<a href="{{ url_for('index') }}" class="sign__logo">
+							<img src="{{ url_for('static', filename='images/logo.svg') }}" alt="">
+						</a>
 
-							<div class="sign__group">
-								<input type="text" class="sign__input" placeholder="Email">
-							</div>
+						<div class="sign__group">
+							<input type="text" class="sign__input" name="username" placeholder="Username" required>
+						</div>
 
-							<div class="sign__group">
-								<input type="password" class="sign__input" placeholder="Password">
-							</div>
+						<div class="sign__group">
+							<input type="password" class="sign__input" name="password" placeholder="Password" required>
+						</div>
 
-							<div class="sign__group sign__group--checkbox">
-								<input id="remember" name="remember" type="checkbox" checked="checked">
-								<label for="remember">Remember Me</label>
-							</div>
-							
-							<button class="sign__btn" type="button">Sign in</button>
+						<div class="sign__group sign__group--checkbox">
+							<input id="remember" name="remember" type="checkbox" checked="checked">
+							<label for="remember">Remember Me</label>
+						</div>
 
-							<span class="sign__text">Don't have an account? <a href="signup.html">Sign up!</a></span>
+						<button class="sign__btn" type="submit">Sign in</button>
 
-							<span class="sign__text"><a href="#">Forgot password?</a></span>
-						</form>
-						<!-- end authorization form -->
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+						<span class="sign__text">Don't have an account? <a href="{{ url_for('signup') }}">Sign up!</a></span>
+
+						<span class="sign__text"><a href="#">Forgot password?</a></span>
+					</form>
+					<!-- end authorization form -->
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% include 'footer_common.html' %}
