--- a/videotheque/templates/signup.html
+++ b/videotheque/templates/signup.html
@@ -18,8 +18,16 @@
 								<input type="text" class="sign__input" name="username" placeholder="Username">
 							</div>
 
-							<div class="sign__group" hidden>
-								<input type="text" class="sign__input" placeholder="Email">
+							<div class="sign__group"> 
+								<input type="text" class="sign__input" name="name" placeholder="Name">
+							</div>
+
+							<div class="sign__group">
+								<input type="email" name="email" class="sign__input" placeholder="Email">
+							</div>
+
+							<div class="sign__group">
+								<input type="date" name="birth_date" class="sign__input" placeholder="Birth Date">
 							</div>
 
 							<div class="sign__group">
