--- a/videotheque/templates/admin/edit-user.html
+++ b/videotheque/templates/admin/edit-user.html
@@ -1,127 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+{% include 'admin/header_common.html' %}
 
-<!-- Mirrored from dmitryvolkov.me/demo/flixgo2.0/admin/edit-user.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 28 Apr 2020 12:50:40 GMT -->
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<!-- Font -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600%7CUbuntu:300,400,500,700" rel="stylesheet">
+	{% include 'admin/header.html' %}
 
-	<!-- CSS -->
-	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
-	<link rel="stylesheet" href="css/magnific-popup.css">
-	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
-	<link rel="stylesheet" href="css/select2.min.css">
-	<link rel="stylesheet" href="css/ionicons.min.css">
-	<link rel="stylesheet" href="css/admin.css">
 
-	<!-- Favicons -->
-	<link rel="icon" type="image/png" href="icon/favicon-32x32.png" sizes="32x32">
-	<link rel="apple-touch-icon" href="icon/favicon-32x32.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="icon/apple-touch-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="icon/apple-touch-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="icon/apple-touch-icon-144x144.png">
+	{% include 'admin/sidebar.html' %}
 
-	<meta name="description" content="">
-	<meta name="keywords" content="">
-	<meta name="author" content="Dmitry Volkov">
-	<title>FlixGo – Online Movies, TV Shows & Cinema HTML Template</title>
-
-</head>
-<body>
-
-	<!-- header -->
-	<header class="header">
-		<div class="header__content">
-			<!-- header logo -->
-			<a href="index.html" class="header__logo">
-				<img src="img/logo.svg" alt="">
-			</a>
-			<!-- end header logo -->
-
-			<!-- header menu btn -->
-			<button class="header__btn" type="button">
-				<span></span>
-				<span></span>
-				<span></span>
-			</button>
-			<!-- end header menu btn -->
-		</div>
-	</header>
-	<!-- end header -->
-
-	<!-- sidebar -->
-	<div class="sidebar">
-		<!-- sidebar logo -->
-		<a href="index.html" class="sidebar__logo">
-			<img src="img/logo.svg" alt="">
-		</a>
-		<!-- end sidebar logo -->
-		
-		<!-- sidebar user -->
-		<div class="sidebar__user">
-			<div class="sidebar__user-img">
-				<img src="img/user.svg" alt="">
-			</div>
-
-			<div class="sidebar__user-title">
-				<span>Admin</span>
-				<p>John Doe</p>
-			</div>
-
-			<button class="sidebar__user-btn" type="button">
-				<i class="icon ion-ios-log-out"></i>
-			</button>
-		</div>
-		<!-- end sidebar user -->
-
-		<!-- sidebar nav -->
-		<ul class="sidebar__nav">
-			<li class="sidebar__nav-item">
-				<a href="index.html" class="sidebar__nav-link"><i class="icon ion-ios-keypad"></i> Dashboard</a>
-			</li>
-
-			<li class="sidebar__nav-item">
-				<a href="catalog.html" class="sidebar__nav-link"><i class="icon ion-ios-film"></i> Catalog</a>
-			</li>
-
-			<li class="sidebar__nav-item">
-				<a href="users.html" class="sidebar__nav-link"><i class="icon ion-ios-contacts"></i> Users</a>
-			</li>
-
-			<li class="sidebar__nav-item">
-				<a href="comments.html" class="sidebar__nav-link"><i class="icon ion-ios-chatbubbles"></i> Comments</a>
-			</li>
-
-			<li class="sidebar__nav-item">
-				<a href="reviews.html" class="sidebar__nav-link"><i class="icon ion-ios-star-half"></i> Reviews</a>
-			</li>
-			
-			<!-- dropdown -->
-			<li class="dropdown sidebar__nav-item">
-				<a class="dropdown-toggle sidebar__nav-link" href="#" role="button" id="dropdownMenuMore" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="icon ion-ios-copy"></i> Pages</a>
-
-				<ul class="dropdown-menu sidebar__dropdown-menu scrollbar-dropdown" aria-labelledby="dropdownMenuMore">
-					<li><a href="add-item.html">Add item</a></li>
-					<li><a href="edit-user.html">Edit user</a></li>
-					<li><a href="signin.html">Sign In</a></li>
-					<li><a href="signup.html">Sign Up</a></li>
-					<li><a href="forgot.html">Forgot password</a></li>
-					<li><a href="404.html">404 Page</a></li>
-				</ul>
-			</li>
-			<!-- end dropdown -->
-		</ul>
-		<!-- end sidebar nav -->
-		
-		<!-- sidebar copyright -->
-		<div class="sidebar__copyright">© 2019 FlixGo. <br>Create by <a href="https://themeforest.net/user/dmitryvolkov/portfolio" target="_blank">Dmitry Volkov</a></div>
-		<!-- end sidebar copyright -->
-	</div>
-	<!-- end sidebar -->
 
 	<!-- main content -->
 	<main class="main">
@@ -141,12 +25,12 @@
 						<!-- profile user -->
 						<div class="profile__user">
 							<div class="profile__avatar">
-								<img src="img/user.svg" alt="">
+								<img src="{{ url_for('static', filename='admin/img/user.svg') }}" alt="">
 							</div>
 							<!-- or profile__meta--red -->
 							<div class="profile__meta profile__meta--green">
-								<h3>Username <span>(Approved)</span></h3>
-								<span>FlixGo ID: 23562</span>
+								<h3>{{ user.username | capitalize }} <span>(Approved)</span></h3>
+								<span>ID: 23562</span>
 							</div>
 						</div>
 						<!-- end profile user -->
@@ -157,11 +41,11 @@
 								<a class="nav-link active" data-toggle="tab" href="#tab-1" role="tab" aria-controls="tab-1" aria-selected="true">Profile</a>
 							</li>
 
-							<li class="nav-item">
+							<li hidden class="nav-item">
 								<a class="nav-link" data-toggle="tab" href="#tab-2" role="tab" aria-controls="tab-2" aria-selected="false">Comments</a>
 							</li>
 
-							<li class="nav-item">
+							<li hidden class="nav-item">
 								<a class="nav-link" data-toggle="tab" href="#tab-3" role="tab" aria-controls="tab-3" aria-selected="false">Reviews</a>
 							</li>
 						</ul>
@@ -178,9 +62,9 @@
 								<ul class="nav nav-tabs" role="tablist">
 									<li class="nav-item"><a class="nav-link active" id="1-tab" data-toggle="tab" href="#tab-1" role="tab" aria-controls="tab-1" aria-selected="true">Profile</a></li>
 
-									<li class="nav-item"><a class="nav-link" id="2-tab" data-toggle="tab" href="#tab-2" role="tab" aria-controls="tab-2" aria-selected="false">Comments</a></li>
+									<li hidden class="nav-item"><a class="nav-link" id="2-tab" data-toggle="tab" href="#tab-2" role="tab" aria-controls="tab-2" aria-selected="false">Comments</a></li>
 
-									<li class="nav-item"><a class="nav-link" id="3-tab" data-toggle="tab" href="#tab-3" role="tab" aria-controls="tab-3" aria-selected="false">Reviews</a></li>
+									<li hidden class="nav-item"><a class="nav-link" id="3-tab" data-toggle="tab" href="#tab-3" role="tab" aria-controls="tab-3" aria-selected="false">Reviews</a></li>
 								</ul>
 							</div>
 						</div>
@@ -203,7 +87,7 @@
 							<div class="row">
 								<!-- details form -->
 								<div class="col-12 col-lg-6">
-									<form action="#" class="profile__form">
+									<form method="POST" action="{{ url_for('update_profile') }}" class="profile__form">
 										<div class="row">
 											<div class="col-12">
 												<h4 class="profile__title">Profile details</h4>
@@ -212,55 +96,46 @@
 											<div class="col-12 col-md-6 col-lg-12 col-xl-6">
 												<div class="profile__group">
 													<label class="profile__label" for="username">Username</label>
-													<input id="username" type="text" name="username" class="profile__input" placeholder="User 123">
+													<input id="username" type="text" name="username" class="profile__input" placeholder="User" value="{{ user.username }}">
 												</div>
 											</div>
 
 											<div class="col-12 col-md-6 col-lg-12 col-xl-6">
 												<div class="profile__group">
 													<label class="profile__label" for="email">Email</label>
-													<input id="email" type="text" name="email" class="profile__input" placeholder="email@email.com">
+													<input id="email" type="email" name="email" class="profile__input" placeholder="email@email.com" value="{{ user.email }}">
 												</div>
 											</div>
 
 											<div class="col-12 col-md-6 col-lg-12 col-xl-6">
 												<div class="profile__group">
-													<label class="profile__label" for="firstname">First Name</label>
-													<input id="firstname" type="text" name="firstname" class="profile__input" placeholder="John">
+													<label class="profile__label" for="firstname">Name</label>
+													<input id="name" type="text" name="name" class="profile__input" placeholder="Name" value="{{ user.name }}">
 												</div>
 											</div>
 
 											<div class="col-12 col-md-6 col-lg-12 col-xl-6">
 												<div class="profile__group">
-													<label class="profile__label" for="lastname">Last Name</label>
-													<input id="lastname" type="text" name="lastname" class="profile__input" placeholder="Doe">
+													<label class="profile__label" for="birth_date">Birth Date</label>
+													<input id="birth_date" type="text" name="birth_date" class="profile__input" placeholder="Birth Date" 
+															value="{{ user.birth_date }}">
 												</div>
 											</div>
 
-											<div class="col-12 col-md-6 col-lg-12 col-xl-6">
-												<div class="profile__group">
-													<label class="profile__label" for="subscription">Subscription</label>
-													<select class="js-example-basic-single" id="subscription">
-														<option value="Basic">Basic</option>
-														<option value="Premium">Premium</option>
-														<option value="Cinematic">Cinematic</option>
-													</select>
+											{% if user and user.role == 'admin' %}
+												<div class="col-12 col-md-6 col-lg-12 col-xl-6">
+													<div class="profile__group">
+														<label class="profile__label" for="rights">Rights</label>
+														<select class="js-example-basic-single" id="rights">
+															<option value="User">User</option>
+															<option value="Admin">Admin</option>
+														</select>
+													</div>
 												</div>
-											</div>
-
-											<div class="col-12 col-md-6 col-lg-12 col-xl-6">
-												<div class="profile__group">
-													<label class="profile__label" for="rights">Rights</label>
-													<select class="js-example-basic-single" id="rights">
-														<option value="User">User</option>
-														<option value="Moderator">Moderator</option>
-														<option value="Admin">Admin</option>
-													</select>
-												</div>
-											</div>
+											{% endif %}
 
 											<div class="col-12">
-												<button class="profile__btn" type="button">Save</button>
+												<button class="profile__btn" type="submit">Save</button>
 											</div>
 										</div>
 									</form>
@@ -275,7 +150,7 @@
 												<h4 class="profile__title">Change password</h4>
 											</div>
 
-											<div class="col-12 col-md-6 col-lg-12 col-xl-6">
+											<div class="col-12 col-md-6 col-lg-12 col-xl-6" hidden>
 												<div class="profile__group">
 													<label class="profile__label" for="oldpass">Old Password</label>
 													<input id="oldpass" type="password" name="oldpass" class="profile__input">
@@ -1119,15 +994,4 @@
 	</div>
 	<!-- end modal delete -->
 
-	<!-- JS -->
-	<script src="js/jquery-3.4.1.min.js"></script>
-	<script src="js/bootstrap.bundle.min.js"></script>
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/jquery.mousewheel.min.js"></script>
-	<script src="js/jquery.mCustomScrollbar.min.js"></script>
-	<script src="js/select2.min.js"></script>
-	<script src="js/admin.js"></script>
-</body>
-
-<!-- Mirrored from dmitryvolkov.me/demo/flixgo2.0/admin/edit-user.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 28 Apr 2020 12:50:40 GMT -->
-</html>
+{% include 'admin/footer_common.html' %}
