Adding deletion and updating of a Movie

--- a/videotheque/templates/admin/sidebar.html
+++ b/videotheque/templates/admin/sidebar.html
@@ -32,7 +32,10 @@
 			<a href="{{ url_for('edit_user') }}"  class="sidebar__nav-link"><i class="icon ion-ios-person"></i>Edit Profile</a>
 		</li>
 		<li class="sidebar__nav-item">
-			<a href="{{ url_for('add_item') }}"  class="sidebar__nav-link"><i class="icon ion-ios-film"></i> Add Movie</a>
+			<a href="{{ url_for('movies') }}"  class="sidebar__nav-link"><i class="icon ion-ios-film"></i>Movies</a>
+		</li>
+		<li class="sidebar__nav-item">
+			<a href="{{ url_for('add_item') }}"  class="sidebar__nav-link"><i class="icon ion-ios-add-circle-outline"></i> Add Movie</a>
 		</li>
 
 		<!-- <li class="sidebar__nav-item">
@@ -71,7 +74,7 @@
 	<!-- end sidebar nav -->
 	
 	<!-- sidebar copyright -->
-	<div class="sidebar__copyright">© 2019 FlixGo. <br>Create by <a href="https://themeforest.net/user/dmitryvolkov/portfolio" target="_blank">Dmitry Volkov</a></div>
+	<div class="sidebar__copyright">© 2024 FILMIX. <br>Create by <a href="#" target="_blank">Mohamed Bakri & Idrissa SOW</a></div>
 	<!-- end sidebar copyright -->
 </div>
 <!-- end sidebar -->
