--- a/videotheque/templates/header_common.html
+++ b/videotheque/templates/header_common.html
@@ -21,11 +21,11 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
 	<!-- Favicons -->
-    <link rel="icon" type="image/png" href="{{ url_for('static', filename='icon/favicon-32x32.png') }}" sizes="32x32">
-	<link rel="apple-touch-icon" href="{{ url_for('static', filename='icon/favicon-32x32.png') }}">
-	<link rel="apple-touch-icon" sizes="72x72" href="{{ url_for('static', filename='icon/apple-touch-icon-72x72.png') }}">
-	<link rel="apple-touch-icon" sizes="114x114" href="{{ url_for('static', filename='icon/apple-touch-icon-114x114') }}">
-	<link rel="apple-touch-icon" sizes="144x144" href="{{ url_for('static', filename='icon/apple-touch-icon-144x144.png') }}">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='icons/favicon-32x32.png') }}" sizes="32x32">
+	<link rel="apple-touch-icon" href="{{ url_for('static', filename='icons/favicon-32x32.png') }}">
+	<link rel="apple-touch-icon" sizes="72x72" href="{{ url_for('static', filename='icons/apple-touch-icon-72x72.png') }}">
+	<link rel="apple-touch-icon" sizes="114x114" href="{{ url_for('static', filename='icons/apple-touch-icon-114x114') }}">
+	<link rel="apple-touch-icon" sizes="144x144" href="{{ url_for('static', filename='icons/apple-touch-icon-144x144.png') }}">
 
 	<meta name="description" content="">
 	<meta name="keywords" content="">
