--- a/videotheque/templates/index.html
+++ b/videotheque/templates/index.html
@@ -1194,7 +1194,7 @@
 	<!-- end content -->
 
 	<!-- expected premiere -->
-	<section class="section section--bg" data-bg="img/section/section.jpg">
+	<section class="section section--bg" data-bg="{{ url_for('static', filename='images/section/section.jpg') }}">
 		<div class="container">
 			<div class="row">
 				<!-- section title -->
