--- a/videotheque/templates/header.html
+++ b/videotheque/templates/header.html
@@ -6,7 +6,7 @@
                 <div class="col-12">
                     <div class="header__content">
                         <!-- header logo -->
-                        <a href="index.html" class="header__logo">
+                        <a href="{{ url_for('index') }}" class="header__logo">
                             <img src="{{ url_for('static', filename='images/logo.svg') }}" alt="">
                         </a>
                         <!-- end header logo -->
@@ -15,7 +15,7 @@
                         <ul class="header__nav">
                             <!-- dropdown -->
                             <li class="header__nav-item">
-                                <a class="dropdown-toggle header__nav-link" href="#" role="button" id="dropdownMenuHome" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
+                                <a class="dropdown-toggle header__nav-link" href="{{ url_for('index') }}" role="button" id="dropdownMenuHome" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
 
                                 <ul hidden class="dropdown-menu header__dropdown-menu" aria-labelledby="dropdownMenuHome">
                                     <li><a href="index.html">Home slideshow bg</a></li>
@@ -25,7 +25,7 @@
                             <!-- end dropdown -->
 
                             <!-- dropdown -->
-                            <li class="header__nav-item">
+                            <li class="header__nav-item" hidden>
                                 <a class="dropdown-toggle header__nav-link" href="#" role="button" id="dropdownMenuCatalog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Catalog</a>
 
                                 <ul class="dropdown-menu header__dropdown-menu" aria-labelledby="dropdownMenuCatalog">
@@ -46,7 +46,7 @@
                             </li>
 
                             <!-- dropdown -->
-                            <li class="dropdown header__nav-item">
+                            <li class="dropdown header__nav-item" hidden>
                                 <a class="dropdown-toggle header__nav-link header__nav-link--more" href="#" role="button" id="dropdownMenuMore" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="icon ion-ios-more"></i></a>
 
                                 <ul class="dropdown-menu header__dropdown-menu" aria-labelledby="dropdownMenuMore">
@@ -62,7 +62,7 @@
 
                         <!-- header auth -->
                         <div class="header__auth">
-                            <button class="header__search-btn" type="button">
+                            <button hidden class="header__search-btn" type="button">
                                 <i class="icon ion-ios-search"></i>
                             </button>
 
@@ -87,7 +87,7 @@
     </div>
 
     <!-- header search -->
-    <form action="#" class="header__search">
+    <form action="#" class="header__search" hidden>
         <div class="container">
             <div class="row">
                 <div class="col-12">
