--- a/videotheque/templates/details.html
+++ b/videotheque/templates/details.html
@@ -27,7 +27,7 @@
 							<!-- card cover -->
 							<div class="col-12 col-sm-4 col-md-4 col-lg-3 col-xl-5">
 								<div class="card__cover">
-									<img src="{{ url_for('static', filename='images/covers/cover.jpg') }}" alt="">
+									<img src="{{ url_for('static', filename='images/covers/cover2.jpg') }}" alt="">
 								</div>
 							</div>
 							<!-- end card cover -->
