--- a/videotheque/templates/footer.html
+++ b/videotheque/templates/footer.html
@@ -4,7 +4,7 @@
 		<div class="container">
 			<div class="row">
 				<!-- footer list -->
-				<div class="col-12 col-md-3">
+				<div hidden class="col-12 col-md-3">
 					<h6 class="footer__title">Download Our App</h6>
 					<ul class="footer__app">
 						<li><a href="#"><img src="{{ url_for('static', filename='images/Download_on_the_App_Store_Badge.svg') }}" alt=""></a></li>
@@ -14,7 +14,7 @@
 				<!-- end footer list -->
 
 				<!-- footer list -->
-				<div class="col-6 col-sm-4 col-md-3">
+				<div hidden class="col-6 col-sm-4 col-md-3">
 					<h6 class="footer__title">Resources</h6>
 					<ul class="footer__list">
 						<li><a href="#">About Us</a></li>
@@ -25,7 +25,7 @@
 				<!-- end footer list -->
 
 				<!-- footer list -->
-				<div class="col-6 col-sm-4 col-md-3">
+				<div hidden class="col-6 col-sm-4 col-md-3">
 					<h6 class="footer__title">Legal</h6>
 					<ul class="footer__list">
 						<li><a href="#">Terms of Use</a></li>
@@ -36,7 +36,7 @@
 				<!-- end footer list -->
 
 				<!-- footer list -->
-				<div class="col-12 col-sm-4 col-md-3">
+				<div hidden class="col-12 col-sm-4 col-md-3">
 					<h6 class="footer__title">Contact</h6>
 					<ul class="footer__list">
 						<li><a href="tel:+18002345678">+1 (800) 234-5678</a></li>
@@ -54,11 +54,11 @@
 				<!-- footer copyright -->
 				<div class="col-12">
 					<div class="footer__copyright">
-						<small><a target="_blank" href="https://www.templateshub.net">Templates Hub</a></small>
+						<small><b>Video Library Project</b></small>
 
 						<ul>
-							<li><a href="#">Terms of Use</a></li>
-							<li><a href="#">Privacy Policy</a></li>
+							<li><a href="{{ url_for('index') }}">Mohamed Bakri</a></li>
+							<li><a href="{{ url_for('index') }}">Idrissa SOW</a></li>
 						</ul>
 					</div>
 				</div>
